fix provenance matrix values

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -103,7 +103,7 @@ jobs:
     needs: [build]
     strategy:
       matrix:
-        os: [ubuntu-latest, macOS-latest, windows-latest]
+        os: [linux, macos, windows]
     permissions:
       actions: read # To read the workflow path.
       id-token: write # To sign the provenance.
