--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -101,15 +101,25 @@ jobs:
           echo "hash=$(sha256sum ${{ env.BINARY_PATH }} | base64 -w0)" | Out-File -FilePath $env:GITHUB_ENV -Append
 
       - name: Upload binary
-        uses: actions/upload-artifact@3cea5372237819ed00197afe530f5a7ea3e805c8 # tag=v3.1.0
+        uses: actions/upload-artifact@v3.1.0
         with:
           name: pig-amd64-${{ env.os_name }}${{ env.EXT }}
           path: ${{ env.BINARY_PATH }}
           if-no-files-found: error
           retention-days: 5
 
-  provenance:
+  check:
     needs: [build]
+    strategy:
+      matrix:
+        hash: [hash-linux, hash-macos, hash-windows]
+    runs-on: ubuntu-latest
+    steps:
+      - name: echo hash
+        run: echo "${{ needs.build.outputs[matrix.hash] }}"
+
+  provenance:
+    needs: [build, check]
     strategy:
       matrix:
         hash: [hash-linux, hash-macos, hash-windows]
@@ -119,12 +129,12 @@ jobs:
       contents: write # To add assets to a release.
     uses: slsa-framework/slsa-github-generator/.github/workflows/generator_generic_slsa3.yml@v1.9.0
     with:
-      base64-subjects: "${{ needs.build.outputs[matrix.hashs] }}"
+      base64-subjects: "${{ needs.build.outputs[matrix.hash] }}"
       upload-assets: ${{ startsWith(github.ref, 'refs/tags/') }} # Optional: Upload to a new release
       continue-on-error: true
 
   release:
-    needs: [build] #, provenance]
+    needs: [build, provenance]
     runs-on: ubuntu-latest
     if: startsWith(github.ref, 'refs/tags/')
     steps:
