--- a/package.yaml
+++ b/package.yaml
@@ -1,5 +1,5 @@
 name: PiG
-version: 0.1.7
+version: 0.1.8
 github: PKopel/PiG
 license: BSD3
 author: Paweł Kopel
@@ -23,7 +23,6 @@ dependencies:
   - base >= 4.11 && < 10
   - rio >= 0.1.12.0
   - rio-orphans
-  - containers
   - mtl
   - text
   - array
@@ -57,6 +56,7 @@ executables:
       - -threaded
       - -rtsopts
       - -with-rtsopts=-N
+      - -dynamic
 
 tests:
   pig-test:
