add strip stage in release

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -75,6 +75,9 @@ jobs:
       #   with:
       #     files: ${{ env.BINARY_PATH }}
 
+      - name: Strip binary
+        run: strip ${{ env.BINARY_PATH }}
+
       - name: Check binary
         run: |
           ${{ env.BINARY_PATH }} --version
