--- a/stack.yaml
+++ b/stack.yaml
@@ -50,6 +50,9 @@ packages:
 
 # Control whether we use the GHC we find on the path
 system-ghc: true
+
+ghc-options:
+  "$everything": -split-sections
 #
 # Require a specific version of stack, using version ranges
 # require-stack-version: -any # Default
