--- a/package.yaml
+++ b/package.yaml
@@ -19,16 +19,29 @@ extra-source-files:
 # common to point users to the README.md file.
 description: Please see the README on Github at <https://github.com/PKopel/PiG#readme>
 
-dependencies:
-  - base >= 4.11 && < 10
-  - rio >= 0.1.12.0
-  - rio-orphans
-  - mtl
-  - text
-  - array
-  - exceptions
-  - haskeline >= 0.8
-  - pretty-terminal
+when:
+  - condition: os(windows)
+    then:
+      dependencies:
+        - base >= 4.11 && < 10
+        - rio >= 0.1.12.0
+        - rio-orphans
+        - mtl
+        - text
+        - array
+        - exceptions
+        - haskeline >= 0.8
+    else:
+      dependencies:
+        - base >= 4.11 && < 10
+        - rio >= 0.1.12.0
+        - rio-orphans
+        - mtl
+        - text
+        - array
+        - exceptions
+        - haskeline >= 0.8
+        - pretty-terminal
 
 ghc-options:
   - -Wall
