--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -25,11 +25,7 @@ jobs:
           ghc-version: ${{ matrix.ghc }}
           stack-version: ${{ matrix.stack }}
 
-      - uses: actions/cache@v3
-        name: Cache ~/.stack
-        with:
-          path: ~/.stack
-          key: ${{ runner.os }}-${{ matrix.ghc }}-stack
+      - uses: freckle/stack-cache-action@v2
 
       - name: Build
         run: |
